<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="226dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="40dp"
        android:text="@string/main_title"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/results"
        android:layout_width="227dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/results_loading_tag"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <EditText
        android:id="@+id/bookAuthors"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/authors_hint"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <EditText
        android:id="@+id/bookTitle"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:hint="@string/title_hint"
        android:lines="1"
        android:maxLines="10"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookAuthors" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="#BFBFBF"
        android:text="@string/button_search_tag"
        android:textSize="18sp"
        app:backgroundTint="#A5A5A5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookTitle" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="283dp"
        android:layout_height="49dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSearch">

        <RadioButton
            android:id="@+id/radioButtonAll"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_all_tag" />

        <RadioButton
            android:id="@+id/radioButtonBooks"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_books_tag" />

        <RadioButton
            android:id="@+id/radioButtonMagazines"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:text="@string/radio_magazines_tag" />
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listBook"
        android:layout_width="326dp"
        android:layout_height="344dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/results" />

</androidx.constraintlayout.widget.ConstraintLayout>